@@ -101,6 +101,8 @@ Version 0.7.5 UNRELEASED
 
   * Add generic/apt/config_file.{h,cc} to help manage config file
 
+  * attach/detach_user_tag() now return results of the operation
+
 - Documentation:
 
   * manpage:
